[package]
name = "dream"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bencode = "0.2.4"
rand = "0.8.5"
sha1 = "0.10.6"
tokio = { version = "1.41.0", features = ["full"] }
local-ip-address = "0.6.3"
clap = { version = "4.5.20", features = ["derive"] }
hex = "0.4.3"
